--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,21 @@
     @apply gradient text-transparent bg-clip-text;
   }
 }
+
+.wmde-markdown ul{
+  list-style-type: disc;
+  padding-left:  25px;
+  color: white;
+}
+
+/* Carousel */
+.carousel-container {
+  position: relative;
+  z-index: 1 !important;
+}
+
+/* Login Page */
+.login-container {
+  position: relative;
+  z-index: 100 !important;
+}
