--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0.1) 1px,
-      transparent 1px
-    ),
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
-  background-size: 50px 50px;
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%) 0 0,
+              linear-gradient(225deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%) 0 0;
+  background-size: 60px 60px;
+  background-color: #181515; /* Darker base color */
+  background-blend-mode: overlay;
   pointer-events: none;
   z-index: -1;
 }
@@ -22,5 +20,71 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle, transparent, rgba(0, 0, 0, 0.9));
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.6), transparent 80%);
+  opacity: 0.7;
 }
+
+.grid-background::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(45deg, rgba(9, 7, 7, 0.1) 0%, rgba(3, 3, 3, 0.1) 5px, transparent 5px, transparent 10px);
+  opacity: 0.2;
+  pointer-events: none;
+}
+
+/* Carousel */
+.carousel-container {
+  position: relative;
+  z-index: 1 !important;
+}
+
+/* Login Page */
+.login-container {
+  position: relative;
+  z-index: 100 !important;
+}
+
+/* Parent container of Carousel */
+.carousel-wrapper {
+  position: relative;
+  z-index: 1;
+}
+
+/* Parent container of Login */
+.login-wrapper {
+  position: relative;
+  z-index: 100;
+}
+
+/* Set z-index for the body element */
+body {
+  position: relative;
+  z-index: 0;
+}
+
+/* Default light theme styles */
+:root {
+  --background-color: white;
+  --text-color: black;
+}
+
+.light {
+  --background-color: white;
+  --text-color: black;
+}
+
+.dark {
+  --background-color: #1e1e1e;
+  --text-color: white;
+}
+
+/* Apply the theme globally */
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
